# personal-portfolio-projects

./: .gitignore  README.md
ecommerce_price_tracker/: README.md  pyproject.toml  requirements.txt
ecommerce_price_tracker/core/: alerts.py  config.py  db_manager.py  logger.py  validator.py
ecommerce_price_tracker/dashboard/: app.py
ecommerce_price_tracker/scheduler/: main.py
ecommerce_price_tracker/scrapers/: amazon_scraper.py  croma_scraper.py  flipkart_scraper.py  reliance_scraper.py  snapdeal_scraper.py
ecommerce_price_tracker/sql/: schema.sql
revenue_intelligence_platform/: .env  .gitignore  README.md  main.py  pyproject.toml
revenue_intelligence_platform/docs/: data_quality_issues.md  leakage_findings.md  reconciliation_log.md
revenue_intelligence_platform/notebooks/: 01_bronze_load.ipynb  02_data_profiling.ipynb  03_dim_date.ipynb  04_forecasting.ipynb
revenue_intelligence_platform/revenue_intelligence/: .gitignore  dbt_project.yml
revenue_intelligence_platform/revenue_intelligence/macros/: generate_schema_name.sql
revenue_intelligence_platform/sql/ddl/: gold_schema.sql
revenue_intelligence_platform/sql/kpis/: 01_monthly_revenue.sql  02_arpu_ltv.sql  03_mrr_growth.sql  04_yoy_growth.sql  reconciliation_check.sql
revenue_intelligence_platform/sql/leakage/: 00_leakage_summary.sql  01_price_anomaly.sql  02_open_ar.sql  (+3 more)
stock_news_pipeline/: .gitignore  README.md  pyproject.toml  requirements.txt
stock_news_pipeline/airflow/: .env.example  Dockerfile  airflow.cfg  docker-compose.yml  requirements.txt
stock_news_pipeline/src/: airflow.cfg
(+78 files in other folders)
